--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <main>
         <canvas id="gameCanvas"></canvas>
     </main>
-    <script src="src/script.js"></script> <!-- Lien vers un script JavaScript -->
+    <script src="script.js"></script> <!-- Lien vers un script JavaScript -->
 
 </body>
 </html>
