--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuit de l'info - 2024</title>
+    <title>24heures de l'info - 2024</title>
 </head>
 <body>
     <main>
